5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3992/executions/1635_1053.log
== TEST (2019-04-10 14:12:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono")
if(partono = cervo): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = "nao eh pratono do Harry Potter"
print(mensagem)	
-- ERROR:
File "XXXX", line 5
    if(partono = cervo): mensagem = "cervo eh patrono do Harry Potter"
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:12:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono")
if(partono = "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = "nao eh pratono do Harry Potter"
print(mensagem)	
-- ERROR:
File "XXXX", line 5
    if(partono = "cervo"): mensagem = "cervo eh patrono do Harry Potter"
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:12:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono")
if(patrono - cervo): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = "nao eh pratono do Harry Potter"
print(mensagem)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(patrono - cervo): mensagem = "cervo eh patrono do Harry Potter"
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:12:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono")
if(patrono = cervo): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = "nao eh pratono do Harry Potter"
print(mensagem)	
-- ERROR:
File "XXXX", line 5
    if(patrono = cervo): mensagem = "cervo eh patrono do Harry Potter"
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:13:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono")
if(patrono = "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = "nao eh pratono do Harry Potter"
print(mensagem)	
-- ERROR:
File "XXXX", line 5
    if(patrono = "cervo"): mensagem = "cervo eh patrono do Harry Potter"
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:13:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = "nao eh pratono do Harry Potter"
print(mensagem)	
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:14:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = "nao eh pratono do Harry Potter"
print(mensagem)	
-- EXECUTION TIME:
0.161702
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh pratono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:14:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = "nao eh pratono do Harry Potter"
print(mensagem)	
-- EXECUTION TIME:
0.168775
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh pratono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:14:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = "nao eh pratono do Harry Potter"
print(mensagem)	
-- EXECUTION TIME:
0.134944
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:14:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = "nao eh pratono do Harry Potter"
print(mensagem)	
-- EXECUTION TIME:
0.094784
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1635/1053/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:14:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = "nao eh pratono do Harry Potter"
print(mensagem)	
-- EXECUTION TIME:
0.096858
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh pratono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:14:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = "nao eh pratono do Harry Potter"
print(mensagem)	
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:14:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = "nao eh pratono do Harry Potter"
print(mensagem)	
-- EXECUTION TIME:
0.115664
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nome do patrono:nao eh pratono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:15:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = "nao eh pratono do Harry Potter"
print(patrono,mensagem)	
-- EXECUTION TIME:
0.135924
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh pratono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:16:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = "nao eh pratono do Harry Potter"
print(patrono)
print(mensagem)
-- OUTPUT:
cervo
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:16:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = "nao eh pratono do Harry Potter"
print(patrono)
print(mensagem)
-- EXECUTION TIME:
0.148601
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode
nao eh pratono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:17:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = patrono "nao eh pratono do Harry Potter"
print(mensagem)

-- ERROR:
File "XXXX", line 6
    else: mensagem = patrono "nao eh pratono do Harry Potter"
                                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:17:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = patrono "nao eh pratono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.136698
-- ERROR:
  File "/home/codebench/codes/1635/1053/main.py", line 6
    else: mensagem = patrono "nao eh pratono do Harry Potter"
                                                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:17:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = (patrono"nao eh pratono do Harry Potter")
print(mensagem)

-- ERROR:
File "XXXX", line 6
    else: mensagem = (patrono"nao eh pratono do Harry Potter")
                                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:17:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = (patrono, "nao eh pratono do Harry Potter")
print(mensagem)

-- EXECUTION TIME:
0.138494
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
('bode', 'nao eh pratono do Harry Potter')
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:17:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = (patrono, "nao eh pratono do Harry Potter")
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:18:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = (patrono "nao eh pratono do Harry Potter")
print(mensagem)

-- EXECUTION TIME:
0.193804
-- ERROR:
  File "/home/codebench/codes/1635/1053/main.py", line 6
    else: mensagem = (patrono "nao eh pratono do Harry Potter")
                                                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:18:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = (patrono "nao eh pratono do Harry Potter")
print(mensagem)

-- EXECUTION TIME:
0.18225
-- ERROR:
  File "/home/codebench/codes/1635/1053/main.py", line 6
    else: mensagem = (patrono "nao eh pratono do Harry Potter")
                                                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:18:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = (patrono "nao eh pratono do Harry Potter")
print(mensagem)

-- ERROR:
File "XXXX", line 6
    else: mensagem = (patrono "nao eh pratono do Harry Potter")
                                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:18:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = patrono "nao eh pratono do Harry Potter"
print(mensagem)

-- ERROR:
File "XXXX", line 6
    else: mensagem = patrono "nao eh pratono do Harry Potter"
                                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:19:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = (patrono "nao eh pratono do Harry Potter")
print(mensagem)

-- ERROR:
File "XXXX", line 6
    else: mensagem = (patrono "nao eh pratono do Harry Potter")
                                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:19:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = (patrono "nao eh pratono do Harry Potter")
print(mensagem)

-- EXECUTION TIME:
0.212642
-- ERROR:
  File "/home/codebench/codes/1635/1053/main.py", line 6
    else: mensagem = (patrono "nao eh pratono do Harry Potter")
                                                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:19:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = (patrono) "nao eh pratono do Harry Potter"
print(mensagem)

-- ERROR:
File "XXXX", line 6
    else: mensagem = (patrono) "nao eh pratono do Harry Potter"
                                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:19:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = (patrono, "nao eh pratono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.160874
-- ERROR:
  File "/home/codebench/codes/1635/1053/main.py", line 7
    print(mensagem)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:19:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = (patrono, "nao eh pratono do Harry Potter")
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:19:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = (patrono, "nao eh pratono do Harry Potter")
print(mensagem)

-- EXECUTION TIME:
0.132333
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
('bode', 'nao eh pratono do Harry Potter')
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:19:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = (patrono, "nao eh pratono do Harry Potter")
print(mensagem)

-- EXECUTION TIME:
0.156767
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:19:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = (patrono, "nao eh pratono do Harry Potter")
print(mensagem)

-- EXECUTION TIME:
0.121688
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
('bode', 'nao eh pratono do Harry Potter')
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:19:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = (patrono, "nao eh pratono do Harry Potter")
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:19:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = (patrono, "nao eh pratono do Harry Potter")
print(mensagem)

-- EXECUTION TIME:
0.113921
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nome do patrono:('bode', 'nao eh pratono do Harry Potter')
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:20:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = <entrada> "nao eh pratono do Harry Potter")
print(mensagem)

-- EXECUTION TIME:
0.209098
-- ERROR:
  File "/home/codebench/codes/1635/1053/main.py", line 6
    else: mensagem = <entrada> "nao eh pratono do Harry Potter")
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:20:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = <entrada> "nao eh pratono do Harry Potter")
print(mensagem)

-- EXECUTION TIME:
0.171799
-- ERROR:
  File "/home/codebench/codes/1635/1053/main.py", line 6
    else: mensagem = <entrada> "nao eh pratono do Harry Potter")
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:20:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = <entrada> "nao eh pratono do Harry Potter")
print(mensagem)

-- ERROR:
File "XXXX", line 6
    else: mensagem = <entrada> "nao eh pratono do Harry Potter")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:20:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = <patrono> "nao eh pratono do Harry Potter")
print(mensagem)

-- ERROR:
File "XXXX", line 6
    else: mensagem = <patrono> "nao eh pratono do Harry Potter")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:20:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = <patrono> "nao eh pratono do Harry Potter")
print(mensagem)

-- EXECUTION TIME:
0.150864
-- ERROR:
  File "/home/codebench/codes/1635/1053/main.py", line 6
    else: mensagem = <patrono> "nao eh pratono do Harry Potter")
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:20:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = <patrono> "nao eh pratono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.136509
-- ERROR:
  File "/home/codebench/codes/1635/1053/main.py", line 6
    else: mensagem = <patrono> "nao eh pratono do Harry Potter"
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:20:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = <patrono> "nao eh pratono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.139437
-- ERROR:
  File "/home/codebench/codes/1635/1053/main.py", line 6
    else: mensagem = <patrono> "nao eh pratono do Harry Potter"
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:20:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = <patrono> "nao eh pratono do Harry Potter"
print(mensagem)

-- ERROR:
File "XXXX", line 6
    else: mensagem = <patrono> "nao eh pratono do Harry Potter"
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:20:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = (patrono "nao eh pratono do Harry Potter")
print(mensagem)

-- ERROR:
File "XXXX", line 6
    else: mensagem = (patrono "nao eh pratono do Harry Potter")
                                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:20:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = (patrono "nao eh pratono do Harry Potter")
print(mensagem)

-- EXECUTION TIME:
0.194982
-- ERROR:
  File "/home/codebench/codes/1635/1053/main.py", line 6
    else: mensagem = (patrono "nao eh pratono do Harry Potter")
                                                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:21:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = (patrono, "nao eh pratono do Harry Potter")
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:21:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = patrono, "nao eh pratono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.156766
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
('bode', 'nao eh pratono do Harry Potter')
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:21:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = patrono, "nao eh pratono do Harry Potter"
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:22:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = patrono, 'nao eh pratono do Harry Potter'
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:22:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = patrono "nao eh pratono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.154771
-- ERROR:
  File "/home/codebench/codes/1635/1053/main.py", line 6
    else: mensagem = patrono "nao eh pratono do Harry Potter"
                                                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:22:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = patrono, "nao eh pratono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.188938
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
('bode', 'nao eh pratono do Harry Potter')
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:22:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = patrono, "nao eh pratono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.100374
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:22:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = patrono, "nao eh pratono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.089406
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1635/1053/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:22:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = patrono, "nao eh pratono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.135431
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:22:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = patrono, "nao eh pratono do Harry Potter"
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:22:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = patrono, "nao eh pratono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.19379
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nome do patrono:('bode', 'nao eh pratono do Harry Potter')
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:23:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = patrono, "nao eh pratono do Harry Potter"
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:23:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = patrono, "nao eh pratono do Harry Potter"
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:23:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = patrono, "nao eh pratono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.285473
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
('bode', 'nao eh pratono do Harry Potter')
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:23:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = patrono, "nao eh pratono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.128569
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
('bode', 'nao eh pratono do Harry Potter')
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:23:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = patrono, "nao eh pratono do Harry Potter"
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:24:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = patrono + "nao eh pratono do Harry Potter"
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:24:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = patrono + " nao eh pratono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.180429
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh pratono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:24:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = patrono + " nao eh pratono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.194205
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:24:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = patrono + " nao eh pratono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.172238
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh pratono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:24:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = patrono + " nao eh pratono do Harry Potter"
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:24:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = patrono + " nao eh pratono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.171593
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh pratono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:25:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = patrono + " nao eh pratono do Harry Potter"
print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:25:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = patrono + " nao eh pratono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.157216
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh pratono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:26:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("nome do patrono:")
if(patrono == "cervo"): mensagem = "cervo eh patrono do Harry Potter"
else: mensagem = patrono + " nao eh patrono do Harry Potter"
print(mensagem)

-- EXECUTION TIME:
0.135337
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
